Removed loose links

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="">Projects</a></li>
+					<!-- <li><a href="">Projects</a></li> -->
 				</ul>
 			</nav>
 
@@ -92,9 +92,9 @@
 				<p>
 					Let's build something cool together! 🚀
 				</p>
-				<footer>
+				<!-- <footer>
 					<a href="#" class="button">Continue Reading</a>
-				</footer>
+				</footer> -->
 			</article>
 
 		</div>
