--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="wrapper style2">
 
 			<article id="main" class="container special" , style="padding-top: 2cm;">
-				<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+				<a href="#" class="image featured"><img src="images/banner.jpg" alt="" /></a>
 				<header>
 					<h2><a href="#">Hello, there!</a></h2>
 				</header>
