Added projects page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<!-- <li><a href="">Projects</a></li> -->
+					<li><a href="pages/projects.html">Projects</a></li>
 				</ul>
 			</nav>
 
@@ -86,9 +86,12 @@
 					staying active, trying new things, and balancing my technical side with creative and social outlets.
 
 				</p>
-				This site is where I share my projects, research, and random tech adventures. Feel free to explore,
-				check out my work, or reach out if you want to talk AI, quantum computing, or just nerd out over the
-				latest tech trends.
+				<p>
+
+					This site is where I share my projects, research, and random tech adventures. Feel free to explore,
+					check out my work, or reach out if you want to talk AI, quantum computing, or just nerd out over the
+					latest tech trends.
+				</p>
 				<p>
 					Let's build something cool together! 🚀
 				</p>
@@ -114,12 +117,19 @@
 							</header>
 							<p>Click a button to connect!</p>
 							<ul class="icons">
-								<li><a href="https://www.instagram.com/vishwa_702/"
-										class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+
 								<li><a href="https://www.linkedin.com/in/vishwajeet-ohal"
 										class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+
 								<li><a href="mailto:ohal@ualberta.ca" class="icon solid fa-envelope"><span
 											class="label">Email</span></a></li>
+
+								<li><a href="https://github.com/vishwa702" class="icon brands fa-github"><span
+											class="label">GitHub</span></a></li>
+
+								<li><a href="https://www.instagram.com/vishwa_702/" class="icon brands fa-instagram">
+										<span class="label">Instagram</span></a></li>
+
 
 							</ul>
 						</section>
