Add whitespace in button

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -98,7 +98,7 @@
 						</header>
 
 						<p>
-							Psst! For a sneak peak at all of my projects, visit my <span class="project-link-btn"><a href="https://github.com/vishwa702/" style="color: white; text-decoration: none;"> GitHub profile</a> <a style="color: white; text-decoration: none;" href="https://github.com/vishwa702/" class="icon brands fa-github"></a></span>
+							Psst! For a sneak peak at all of my projects, visit my <span class="project-link-btn"><a href="https://github.com/vishwa702/" style="color: white; text-decoration: none;">GitHub profile &nbsp</a> <a style="color: white; text-decoration: none;" href="https://github.com/vishwa702/" class="icon brands fa-github"></a></span>
 
 						</p>
 
