Add project detail

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -63,7 +63,7 @@
 						<p>An application that provides a bias-free method to analyze happiness scores via advanced data
 							mining techniques including <strong>OPTICS</strong> and <strong>DBSCAN</strong>.</p>
 						<p>Analyzed data for <strong>156 countries</strong> across <strong>8 years</strong> to extract
-							the most significant factors and derive a custom metric for public happiness. Additionally, I recommend a combination of factors that would most help a particular country increase their happiness score.  </p>
+							the most significant factors and derive a custom metric for public happiness. Additionally, I recommend a combination of factors (see the red arrow in the figure) that would most help a particular country increase their happiness score. </p>
 						<h5>Technologies:</h3>
 							<ul>
 								<li>Time-Series Analysis</li>
