--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="pages/projects.html">Projects</a></li>
+					<li><a href="https://drive.google.com/file/d/16eXB_GHa2vtHuzuBM2L4ppvrRdC4QRvT/view?usp=sharing">CV</a></li>
 				</ul>
 			</nav>
 
