Move last project to the correct node

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,7 +14,7 @@
 	<noscript>
 		<link rel="stylesheet" href="../assets/css/noscript.css" />
 	</noscript>
-	
+
 
 </head>
 
@@ -33,10 +33,11 @@
 
 			<!-- Nav -->
 			<nav id="nav">
-				<ul >
+				<ul>
 					<li><a href="../index.html">Home</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="https://drive.google.com/file/d/16eXB_GHa2vtHuzuBM2L4ppvrRdC4QRvT/view?usp=sharing" target="_blank">CV</a></li>
+					<li><a href="https://drive.google.com/file/d/16eXB_GHa2vtHuzuBM2L4ppvrRdC4QRvT/view?usp=sharing"
+							target="_blank">CV</a></li>
 
 				</ul>
 			</nav>
@@ -51,20 +52,23 @@
 					<section>
 						<header>
 							<h3>Analysis of Global Happiness Indicators
-								<span >
-									<a href="https://github.com/vishwa702/Clustering-Happiness" class=" project-link-btn icon brands fa-github">
+								<span>
+									<a href="https://github.com/vishwa702/Clustering-Happiness"
+										class=" project-link-btn icon brands fa-github">
 										&nbsp View Code <span class="label">GitHub</span>
 									</a>
 								</span>
 							</h3>
-								
+
 						</header>
 						<img src="../images/Clustering-Happiness.png" width="500px">
 
 						<p>An application that provides a bias-free method to analyze happiness scores via advanced data
 							mining techniques including <strong>OPTICS</strong> and <strong>DBSCAN</strong>.</p>
 						<p>Analyzed data for <strong>156 countries</strong> across <strong>8 years</strong> to extract
-							the most significant factors and derive a custom metric for public happiness. Additionally, I recommend a combination of factors (see the red arrow in the figure) that would most help a particular country increase their happiness score. </p>
+							the most significant factors and derive a custom metric for public happiness. Additionally,
+							I recommend a combination of factors (see the red arrow in the figure) that would most help
+							a particular country increase their happiness score. </p>
 						<h5>Technologies:</h3>
 							<ul>
 								<li>Time-Series Analysis</li>
@@ -74,7 +78,35 @@
 								<li>Streamlit</li>
 							</ul>
 
-							 
+
+
+
+					</section>
+				</article>
+
+			</div>
+
+		</div>
+
+
+		<div class="wrapper style2" style="margin-top: 50px;">
+
+			<div class="container">
+				<article id="main" class="special">
+					<section>
+						<header>
+							<h3>More projects coming soon!</h3>
+						</header>
+
+						<p>
+							Psst! For a sneak peak at all of my projects, visit my <span class="project-link-btn"><a
+									href="https://github.com/vishwa702/"
+									style="color: white; text-decoration: none;">GitHub profile &nbsp</a> <a
+									style="color: white; text-decoration: none;" href="https://github.com/vishwa702/"
+									class="icon brands fa-github"></a></span>
+
+						</p>
+
 
 
 					</section>
@@ -88,29 +120,6 @@
 	<div class="wrapper style2">
 
 
-
-		<div class="wrapper style2" style="margin-top: 50px;">
-
-			<div class="container">
-				<article id="main" class="special">
-					<section>
-						<header>
-							<h3>More projects coming soon!</h3>
-						</header>
-
-						<p>
-							Psst! For a sneak peak at all of my projects, visit my <span class="project-link-btn"><a href="https://github.com/vishwa702/" style="color: white; text-decoration: none;">GitHub profile &nbsp</a> <a style="color: white; text-decoration: none;" href="https://github.com/vishwa702/" class="icon brands fa-github"></a></span>
-
-						</p>
-
-
-
-					</section>
-				</article>
-
-			</div>
-
-		</div>
 
 
 		<!-- Footer -->
