Added a commented template for new projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -89,6 +89,39 @@
 		</div>
 
 
+		<!-- Template - Duplicate this to add a new project card -->
+		<!-- <div class="wrapper style2">
+
+			<div class="container">
+				<article id="main" class="special">
+					<section>
+						<header>
+							<h3>Project Title
+								<span>
+									<a href="https://github.com/vishwa702/"
+										class=" project-link-btn icon brands fa-github">
+										&nbsp View Code <span class="label">GitHub</span>
+									</a>
+								</span>
+							</h3>
+
+						</header>
+						<img src="../images/Clustering-Happiness.png" width="500px">
+
+						<p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, nulla repellendus aperiam sint alias optio quidem, nobis quos quaerat sequi consectetur labore iure impedit ex eveniet harum magnam eum quis! </p>
+						<h5>Technologies:</h3>
+							<ul>
+								<li>Sci-kit learn</li>
+								<li>NumPy</li>
+							</ul>
+
+					</section>
+				</article>
+
+			</div>
+
+		</div> -->
+
 		<div class="wrapper style2" style="margin-top: 50px;">
 
 			<div class="container">
@@ -106,8 +139,6 @@
 									class="icon brands fa-github"></a></span>
 
 						</p>
-
-
 
 					</section>
 				</article>
