Added Cover Letter Builder project

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -45,6 +45,42 @@
 		</div>
 
 		<!-- Main -->
+
+		<div class="wrapper style2">
+
+			<div class="container">
+				<article id="main" class="special">
+					<section>
+						<header>
+							<h3> AI-Powered Cover Letter Builder
+								<span>
+									<a href="https://github.com/vishwa702/LLM-Cover-Letter-Builder"
+										class=" project-link-btn icon brands fa-github">
+										&nbsp View Code <span class="label">GitHub</span>
+									</a>
+								</span>
+							</h3>
+
+						</header>
+						<img src="../images/Cover-Letter-Builder.png" width="500px">
+
+						<p> Writing cover letters during a job search can be a time-consuming and challenging task, requiring job seekers to carefully articulate their skills, experiences, and motivations for each role. This application streamlines the process by allowing users to quickly generate personalized cover letters that effectively communicate their qualifications. By leveraging <strong>AI-powered language models</strong>, the app helps transform raw thoughts and past experiences into a <strong>well-structured, compelling, and tailored cover letter</strong>. With features like <strong>resume-based querying, iterative editing, and intelligent keyword extraction</strong>, users can ensure that their application highlights the most relevant aspects of their background, making the job application process more efficient and impactful. </p>
+						<h5>Technologies:</h3>
+							<ul>
+								<li>Retrieval Augmented Generation (RAG)</li>
+								<li>LangChain</li>
+								<li>OpenAI API</li>
+								<li>DeepSeek-v3 LLM</li>
+								<li>ChromaDB Vector Database</li>
+							</ul>
+
+					</section>
+				</article>
+
+			</div>
+
+		</div>
+
 		<div class="wrapper style2">
 
 			<div class="container">
